fix: hide search on mobile

--- a/components/Header/Search/Search.module.scss
+++ b/components/Header/Search/Search.module.scss
@@ -1,57 +1,61 @@
 @import "@/styles/_variables.scss";
+@import "@/styles/_breakpoints.scss";
 
 .form {
-  height: 100%;
+	height: 100%;
 }
 
 .input {
-  flex: 1;
-  border: none;
-  background: transparent;
-  color: white;
-  font: inherit;
-  font-size: 14px;
-  &:focus {
-    outline: none;
-  }
-  padding: 0 2rem 0 3.5rem;
-  height: 100%;
-  border-radius: 50px;
-  transition: 0.2s ease border;
+	flex: 1;
+	border: none;
+	background: transparent;
+	color: white;
+	font: inherit;
+	font-size: 14px;
+	&:focus {
+		outline: none;
+	}
+	padding: 0 2rem 0 3.5rem;
+	height: 100%;
+	border-radius: 50px;
+	transition: 0.2s ease border;
 }
 
 .wrapper {
-  display: flex;
-  align-items: center;
-  background-color: rgba(white, 0.1);
+	display: flex;
+	align-items: center;
+	background-color: rgba(white, 0.1);
 
-  max-width: 500px;
-  width: 100%;
-  border-radius: 50px;
-  position: relative;
-  height: 100%;
+	max-width: 500px;
+	width: 100%;
+	border-radius: 50px;
+	position: relative;
+	height: 100%;
+	@include breakpoint(sm, max) {
+		display: none;
+	}
 }
 
 .icon {
-  height: 45%;
-  color: white;
-  position: absolute;
-  left: 1.5rem;
-  pointer-events: none;
+	height: 45%;
+	color: white;
+	position: absolute;
+	left: 1.5rem;
+	pointer-events: none;
 }
 
 .input::placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: white;
-  opacity: 1; /* Firefox */
+	/* Chrome, Firefox, Opera, Safari 10.1+ */
+	color: white;
+	opacity: 1; /* Firefox */
 }
 
 .input:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
-  color: white;
+	/* Internet Explorer 10-11 */
+	color: white;
 }
 
 .input::-ms-input-placeholder {
-  /* Microsoft Edge */
-  color: white;
+	/* Microsoft Edge */
+	color: white;
 }
